[package]
name = "huawei-models"
version = "0.1.22"
description = "Huawei inverters Data Models library - may be used with any modbus library"
authors = [
    "Gustavo Weber Denardin <gustavo.denardin@gmail.com>"
]
license = "Apache-2.0"
readme = "README.md"
keywords = ["modbus", "huawei", "smartgrid"]
homepage = "https://github.com/gustavowd/huawei-models"
repository = "https://github.com/gustavowd/huawei-models"
include = ["src", "README.md", "LICENSES"]
edition = "2024"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
